<?xml version="1.0" encoding="utf-8"?>
<resources>
 
	<string name="app_name">Meditation Tracker</string>

	<string name="dummy_practice_name">Diamond Mind and some more text to make it surely multiline and then some more just to be sure you know</string>
	<string name="dummy_practice_total_count">111111</string>
	<string name="dummy_practice_scheduled_count">108</string>
	<string name="dummy_practice_current_count1">12315 (80%)</string>
	<string name="dummy_practice_current_count2">5614</string>
	<string name="dummy_practice_done_today">216</string>
    <string name="dummy_practice_last_practice_date">12/07/2013</string>
    <string name="dummy_practice_scheduled_completion_date">17/07/2016</string>
    
    <string name="dummy_practice_current_mala_count">2</string>
    
    			
    <string name="refuge">Refuge</string>
    <string name="diamondMind">Diamond Mind</string>
    <string name="mandalaOffering">Mandala Offering</string>
	<string name="guruYoga">Guru Yoga</string>
    	
	<string name="scheduled">Scheduled</string>
	<string name="completed">Completed</string>

	<string name="practiceImage">Practice image</string>

	<string name="startMeditation">Meditate!</string>
	<string name="addMeditation">Add</string>
	<string name="details">Details</string>
	<string name="edit">Edit</string>
	<string name="remove">Remove</string>

    <string name="accept">Accept</string>
    <string name="discard">Discard</string>

    <string name="change_image">Change image</string>
    <string name="of">of</string> <!-- that's the little of in "2345 _of_ 111111" above the progress bar -->
    <string name="scheduled_for_today">Scheduled for today</string>
    <string name="completed_today">Completed today</string>
    <string name="last_practice">Last practice</string>
    <string name="scheduled_completion">Scheduled completion</string>
    <string name="tap_image_to_start_meditation">Tap image to start</string>
    
    
    <string name="times">x</string> 
    <string name="equals">=</string> 
    
    <string name="save_changes_title">Save?</string>
    <string name="save_session_changes_message">Do you want to save this session?</string>
    <string name="save_practice_changes_message">Do you want to save changes to this practice?</string>
    
    <string name="tap_the_image_to_add_mala">Tap the image to add mala</string>
    <string name="meditation_name">Meditation name</string>
    <string name="scheduled_total">Practice total (but very loong)</string>
    <string name="completed_total">Completed total (also long one but not insanely)</string>
    <string name="daily_repetitions">Daily repetitions</string>
    <string name="tap_image_to_change">Tap image to change</string>
    <string name="completion_date">(Maybe) completion date</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="choose_existing_picture">Choose existing picture</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="image_source_title">Choose source</string>
    
    <string name="new_practice">New practice</string>
    
    <string name="url_refuge">content://com.meditationtracker2.images/refuge</string>
    <string name="url_diamondMind">content://com.meditationtracker2.images/diamondMind</string>
    <string name="url_mandalaOffering">content://com.meditationtracker2.images/mandalaOffering</string>
    <string name="url_guruYoga">content://com.meditationtracker2.images/guruYoga</string>
    <string name="url_sixteenthKarmapa">content://com.meditationtracker2.images/sixteenth_karmapa</string>
    
    <string name="title_delete_ngondro">Cannot delete Ngondro</string>
    <string name="message_delete_ngondro">For 111111 reasons this app cannot delete Ngondro. But we can hide them. Shall we?</string>
    
    <!-- old stuff -->
	
    <string name="delete">Delete</string>
    <string name="open">Open</string>
    <string name="takePicture">Take photo</string>
    <string name="browseImage">Pick picture</string>
    <string name="ringtone">Sound</string>
    <string name="buzz">Buzz</string>
    <string name="newPractice">Add meditation</string>
    <string name="editPractice">Edit meditation</string>
    <string name="countDown">Countdown</string>
    <string name="stopWatch">Stopwatch</string>
    <string name="useStopWatch">Stopwatch or countdown?</string>
    <string name="timerNotification">Play sound</string>
    <string name="sessionLength">Session length min.</string>
    <string name="malaSize">Mala size</string>
    <string name="customMalaSize">Mala size (leave empty for default)</string>
    <string name="showNgondro">Show Ngondro</string>
    <string name="showAll">Show all...</string>
    <string name="settings">Settings</string>
    <string name="app_name">Meditation Tracker</string>
    <string name="ngondroTitle">Ngondro</string>
    <string name="recentTitle">Recent</string>
    <string name="myMeditationsTitle">My meditations</string>
    <string name="guruYoga">Guru Yoga</string>
    <string name="refuge">Refuge</string>
    <string name="diamondMind">Diamond Mind and some more text to make it surely multiline and then some more just to be sure you know</string>
    <string name="mandalaOffering">Mandala Offering</string>
    <string name="practiceName">Practice name</string>
    <string name="requiredRepetitions">Required repetitions</string>
    <string name="completedRepetitions">Completed repetitions</string>
    <string name="save">Save</string>
    <string name="tapImgToChoose">Tap image to choose</string>
    <string name="imageSourceTitle">Choose image source</string>
    <string name="start">Start</string>
    <string name="schedule">Schedule</string>
    <string name="edit">Edit</string>
    <string name="scheduledForToday">Scheduled for today</string>
    <string name="completedToday">Completed today</string>
    <string name="lastPracticeDate">Last practice date</string>
    <string name="scheduledCompletionDate">Scheduled completion date</string>
    <string name="dailyRepetitions">Daily repetitions</string>
    <string name="completionDate">Completion date</string>
    <string name="chooseAction">Choose action</string>
    <string name="msgNoEditNgondro">You cannot delete Ngondro entries. If you\'re not
		interested in them - you can hide them in settings.</string>
    <string name="error">Error</string>
    <string name="info">Information</string>
    <string name="confirmDeletionMsg">Are you sure you want to delete this practice?</string>
    <string name="confirmDeletionTitle">Confirm deletion</string>
    <string name="howMuch">How much shall we add this time?</string>
    <string name="stopTimer">Stop timer</string>
    <string name="startTimer">Start timer</string>
    <string name="addMala">Add mala</string>
    <string name="setMalaCount">Set count</string>
    <string name="appUrl">http://dooreelkow.blogspot.com/2011/05/iv-ii.html</string>
    <string name="about">About&#8230;</string>
    <string name="hi">Hi!</string>
    <string name="version">v5 \'108\'
        \n\nWritten by Doo Reelkow.\n
		many thanks to Philipp Rollinger and Kamil Albrycht for translations and
		Vika Onischenko for testing, advises, translations and great help.
		\n\n
		Karmapa chenno!</string>
    <string name="support">Support/discussion→</string>
    <string name="support_web_warning">Go to app\'s blog</string>
    <string name="oneBeadHeptic">Buzz differently</string>
    <string name="oneBeadHepticSummary">Use different patterns on every 10th and 50th
		\"bead\"</string>
    <string name="dimNight">Dim at night time</string>
    <string name="dimNightSummary">Dim session screen during late meditations</string>
    <string name="versionInfo">Version</string>
    <string name="postInstallWelcome">Welcome to the new meditation tracker.
        \n\nThis is not the promised big google-synchronising release. 
        It\'s better. It\'s a small google-synchronizing release. For devices running 2.2 and up 
        Meditation Tracker will now keep its state in android settings cloud. This means that
        when you download this app to the new phone it\'ll automatically synchronize your practices and progress.
        \nExporting practice entries for reporting and graphs is postponed and I guess is somewhat irrelevant now.
	    \n\nKeep up your practices!
	    \n\nYours, Doo Reelkow.</string>
    <string name="titleLast">Recent</string>
    <string name="titleAll">All</string>
    <string name="practiceImage">Practice image</string>
    <string name="title_practice_detail">Practice</string>
    <string name="title_practice_list">Meditation tracker</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_practice_detail">PracticeDetailActivity</string>
    <string name="title_activity_practice_do">PracticeDoActivity</string>
    <string name="title_activity_edit_practice">EditPracticeActivity</string>	
	
    <!-- end old stuff -->
    
</resources>