<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_start"
        android:orderInCategory="10"
        android:showAsAction="always|withText"
        android:title="@string/startMeditation"
        android:icon="@drawable/ic_av_play"/>
    
    <item
        android:id="@+id/menu_details"
        android:orderInCategory="20"
        android:showAsAction="ifRoom|withText"
        android:title="@string/details"
        android:icon="@drawable/ic_collections_view_as_list"/>
    
    <item
        android:id="@+id/menu_edit"
        android:orderInCategory="25"
        android:showAsAction="ifRoom"
        android:title="@string/edit"
        android:icon="@drawable/ic_content_edit"/>
    
    <item
        android:id="@+id/menu_delete"
        android:orderInCategory="30"
        android:showAsAction="never|withText"
        android:title="@string/remove"
        android:icon="@drawable/ic_content_remove"/>
    
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never|withText"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_action_settings"/>

</menu>
